--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,10 @@ dependencies:
     sdk: flutter
   ffi: ^2.0.1
   http: ^1.2.1
-
+  excel: ^2.0.4
+  permission_handler: ^10.0.0
+  path_provider: ^2.0.12
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
