--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,8 @@ dependencies:
   excel: ^2.0.4
   permission_handler: ^10.0.0
   path_provider: ^2.0.12
-  
+  url_launcher: ^6.0.20
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
