--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,9 @@ dependencies:
   permission_handler: ^10.0.0
   path_provider: ^2.0.12
   url_launcher: ^6.0.20
-
+  pdf: ^3.3.0
+  printing: ^5.9.0
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
